base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedora-repository
spec:
  selector:
    app: fedora
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
